message Error
{
	required bool isError = 1 [default = false];
	
	optional string errorMessage = 2;
}